# anigo

./: .gitignore  Cargo.toml  LICENSE  build.sh
lib/: cdylib.rs  mod.rs  specialty.rs
lib/impl_core/: component.rs  data.rs  library.rs  life_cycle.rs  mod.rs
lib/impl_manager/: component.rs  library.rs  mod.rs
lib/impl_slib/: mod.rs
src/: main.rs
src/plugin/: mod.rs
src/plugins/: mod.rs
