[package]
name = "anigo-cli"
version = "0.1.0"
authors = ["FlamesX-128", "anigo-org"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anigo = { branch = "main", git = "https://github.com/anigo-org/anigo-plugin-model", package = "anigo-plugin-model" }

libloading = "0.7"
walkdir = "2"
