[package]
name = "anigo-bin"
version = "0.1.0"
authors = ["FlamesX-128", "anigo-org"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "anigo"
path = "lib/mod.rs"
crate-type = ["lib", "cdylib"]

[features]
cdylib = []

[dependencies]
inquire = { version = "0.5.2", features = ["date"] }

libloading = "0.7"
serde_json = "1.0"
walkdir = "2"

#inquire = { version = "0.5.2", features = ["date"] }
#libloading = "0.7"
#walkdir = "2"

#tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
#anigo = { path = "../anigo-plugin-model", package = "anigo-plugin-model" }
#serde_json = "1.0"
